update home page (mobile)

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 	body {
 		@apply m-0 font-sans-serif overflow-x-hidden !important;
 	}
+
+	.img {
+		@apply object-cover w-full h-full;
+	}
 }
 
 body {
